--- a/assets/style.css
+++ b/assets/style.css
@@ -18,9 +18,7 @@ main {
     justify-content: space-between;
     /* border: 2px; */
     background-color: rgb(17, 78, 78);
-    margin-bottom: 0%;
-    
-    
+    margin-bottom: 0%;    
 }
 
 h1 {
@@ -66,23 +64,61 @@ nav ul li {
 #AboutMe {
     font-size: 18pt;
     border-right: 6px solid black;
+    padding-bottom: 50px;
 }
 
 #AboutMeContent {
     padding-left: 16px;
+    padding-bottom: 50px;
+    font-size: 20pt;
 }
 
 #Work {
     font-size: 18pt;
     border-right: 6px solid black;
+    padding-bottom: 500px;
+    height: 1000px;
 }
 
 #WorkContent {
     padding-left: 16px;
+    /* padding-bottom: 500px; */
+    grid-template-columns: 3fr;
+    display: grid;
+    /* grid-template-rows: repeat(3, 5vw); */
+    /* grid-gap: 50px; */
+    height: 1000px;
+    
 }
 
+
+
 #SoftwareDeveloper {
-    max-height: 200px;
+    height: 600px;
+    position: relative;
+    margin: auto;
+    width: 1376px;
+    
+}
+
+#HTML {
+    display: flex;
+}
+
+#HTML img{
+    width:669.69px;
+}
+
+#Js {
+    display: flex;
+}
+
+#Js img {
+    width: 669.69px;
+}
+
+.Photo {
+    border: 20px solid whitesmoke;
 }
 
 #Resume {
@@ -97,7 +133,12 @@ nav ul li {
 #ContactMe {
     font-size: 18pt;
     border-right: 6px solid black;
+    width: 235px
+      
+}
 
+#ContactMeContent {
+    padding-left: 10px;
     
 }
 
@@ -106,10 +147,13 @@ footer {
     display: grid;
     grid-template-columns: 1fr 3fr;
     padding: 50px; 
+    
 }
 
 footer ul {
     list-style-type: none;
+    padding: 50px;
+    grid-template-columns: 3fr;
 }
 
 footer ul li {
@@ -118,3 +162,6 @@ footer ul li {
     margin-left: 60px;
     font-size: 16pt;
 }
+
+/* Here starts the media queries that will allow varoius device accessibility and formatting
+
