--- a/assets/style.css
+++ b/assets/style.css
@@ -77,7 +77,7 @@ nav ul li {
     font-size: 18pt;
     border-right: 6px solid black;
     padding-bottom: 500px;
-    height: 1000px;
+    height: 1200px;
 }
 
 #WorkContent {
@@ -87,7 +87,7 @@ nav ul li {
     display: grid;
     /* grid-template-rows: repeat(3, 5vw); */
     /* grid-gap: 50px; */
-    height: 1000px;
+    height: 1200px;
     
 }
 
@@ -128,6 +128,9 @@ nav ul li {
 
 #ResumeContent {
     padding-left: 16px;
+    font-size: 80pt;
+    text-align: center;
+    height: fit-content;
 }
 
 #ContactMe {
@@ -139,7 +142,7 @@ nav ul li {
 
 #ContactMeContent {
     padding-left: 10px;
-    
+       
 }
 
 
@@ -165,3 +168,18 @@ footer ul li {
 
 /* Here starts the media queries that will allow varoius device accessibility and formatting
 
+/* Cards are split into two columns at 992px or smaller */
+@media screen and (max-width: 992px) {
+    body {
+       
+        width: 100%;
+    }
+
+    main {
+
+        width: 400px;
+        grid-template-columns: 1fr 1fr;
+
+    }
+
+}
