--- a/assets/style.css
+++ b/assets/style.css
@@ -138,6 +138,7 @@ nav ul li {
     font-size: 80pt;
     text-align: center;
     height: fit-content;
+    margin-top: -80px;
 }
 
 #ResumeContentBtn {
